client/src/index.css
@import '~material-design-icons/iconfont/material-icons.css';
@import url(https://fonts.googleapis.com/css?family=Roboto:500);

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.backgroundContainer{
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
}

.bg-grey{
  background: lightgrey;
}

.rtl{
  direction: rtl;
}

.shoppingCartContainer{
  direction: rtl;
  position: fixed;
  font-family: inherit;
  top: 60px;
  left: 0;
  min-height: 100px;
  max-height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 20px;
  z-index: 5;
  background: white;
  color: #2D2D2D;
  white-space: nowrap;
  box-shadow: 0 2px 10px black;
  border-radius: 0 0 5px 0;
}
.shoppingCartObjectsContainer{
  direction: ltr;
}
.shoppingCartHeader{
  direction: ltr;
}
.shoppingCartObject{
  direction: ltr;
}

.checkOutContainer{
  min-height: 500px;
  background: white;
  box-shadow: 0 2px 10px black;
  border-radius: 5px;
}

.adminLoginContainer{
  position: absolute;
  top: 15%;
  left: 30%;
  width: 40%;
}

.bestsellers{
  padding-top: 10px;
  text-align: center;
}

.welcomeText{
  white-space: nowrap;
  direction: rtl;
  overflow: visible;
}
.navbar-logo{
  max-height: 40px;
}
.review{
  padding: 60px;
  text-align: center;
}
.btn-circle.btn-sm {
  width: 25px;
  height: 25px;
  border: none;
  border-radius: 50%;
  font-size: 11px;
  text-align: center;
}
.btn-circle.btn-md {
  width: 50px;
  height: 50px;
  padding: 7px 10px;
  border: none;
  border-radius: 25px;
  font-size: 10px;
  text-align: center;
}
.btn-circle.btn-xl {
  width: 70px;
  height: 70px;
  padding: 10px 16px;
  border: none;
  border-radius: 35px;
  font-size: 12px;
  text-align: center;
}
.test{
  background: #0b2e13;
  height: 60px;
  width: 60px;
}
.productContainer{
  padding-top: 60px;
  padding-left: 15px;
  padding-right: 15px;
  margin-right: auto;
  margin-left: auto;
  margin-top: auto;
  width: 100%;
}
.carousel-indicators{
  visibility: hidden;
}
.orderContainer{
  padding-top: 60px;
  margin-right: auto;
  margin-left: auto;
  text-align: center;
}
.fillPage{
  min-height: 100vh;
}

@media (min-width: 768px){
  .fillColumn{
    min-height: 100vh;
  }
}

.previewImage{
  max-width: 100px;
  max-height: 100px;
}

.separator{
  display: flex;
  align-items: center;
}

.separator h5{
  padding: 0 2rem; /* creates the space */
  color: grey;
}

.separator .line{
  flex: 1;
  height: 1px;
  margin: 10px;
  background-color: darkgrey;
}

.google-btn {
  display: inline-block;
  text-align: center;
  width: 184px;
  height: 42px;
  margin: 15px;
  background-color: #4285f4;
  border-radius: 2px;
  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .25);
}
.google-btn .google-icon-wrapper {
  position: absolute;
  margin-top: 1px;
  margin-left: 1px;
  border-radius: 2px;
  background-color: #fff;
}
.google-btn .google-icon {
  position: absolute;
  width: 40px;
  height: 40px;
}
.google-btn .btn-text {
  float: right;
  margin: 11px 11px 0 0;
  color: #fff;
  font-size: 14px;
  letter-spacing: 0.2px;
  font-family: "Roboto";
}
.google-btn:hover {
  box-shadow: 0 0 6px #4285f4;
}
.google-btn:active {
  background: #1669f2;
}

